# src/model/Progress.ts
@@ -1,39 +1,42 @@
 import { Schema, Model, model, Types } from 'mongoose';
+import { FitnessLevel, Goal } from './Profile';
 
-enum Status {
+export enum Status {
   PUBLIC = 'public',
   PRIVATE = 'private',
 }
 
-interface Track {
-  newWeight: number;
-  newHeight: number;
-  newFitnessLevel: string;
-  isAchieveGoal: boolean;
+export interface Track {
+  newWeight: string;
+  newHeight: string;
+  newFitnessLevel: FitnessLevel;
+  achievedGoal: Goal;
 }
 
-interface Progress {
+export interface IProgress {
   workoutSession: string;
-  track: Track;
+  trackProgress: Track;
   performance: string;
   status: Status;
   builder: Types.ObjectId;
   workout: Types.ObjectId;
 }
 
-const progressTrackSchema = new Schema<Progress>(
+const progressSchema = new Schema<IProgress>(
   {
     workoutSession: { type: String, required: [true, 'Workout session must be required*'] },
-    track: { type: Object, required: [true, 'User fitness tracking system must be required*'] },
+    trackProgress: {
+      type: Object,
+      required: [true, 'User fitness progress tracking data must be required*'],
+    },
     performance: {
       type: String,
-      required: [true, 'User performance track must be required*']
+      required: [true, 'User performance must be required*'],
     },
     status: {
       type: String,
       enum: Object.values(Status),
       default: Status.PUBLIC,
-      required: [true, 'User status must be required*'],
     },
     builder: {
       type: Schema.Types.ObjectId,
@@ -44,9 +47,9 @@ const progressTrackSchema = new Schema<Progress>(
       ref: 'WorkoutPlan',
     },
   },
-  { timestamps: true, id: true },
+  { timestamps: true, id: true }
 );
 
-const ProgressTrack: Model<Progress> = model<Progress>('ProgerssTrack', progressTrackSchema);
+const Progress: Model<IProgress> = model<IProgress>('Progerss', progressSchema);
 
-export default ProgressTrack;
+export default Progress;
